<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        android:textColor="@color/terracotta"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/please_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_new_account" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back"
        app:layout_constraintEnd_toEndOf="@+id/ed_email"
        app:layout_constraintStart_toStartOf="@+id/ed_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_email">

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/password_icon"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/show_password_icon"
            android:padding="10dp"
            android:src="@drawable/password_show" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/terracotta"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back_primary"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_forgot_password"
        app:layout_constraintStart_toStartOf="@+id/tv_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/tv_or"
            android:background="#1A000000" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/tv_or"
            android:background="#1A000000" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/google_icon"
            android:src="@drawable/google_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/signInWithGoogle"
        app:layout_constraintStart_toStartOf="@+id/signInWithGoogle"
        app:layout_constraintTop_toBottomOf="@+id/signInWithGoogle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/register"
            android:textColor="@color/terracotta"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>